--- a/frontend/src/app/order-form/order-form.component.html
+++ b/frontend/src/app/order-form/order-form.component.html
@@ -1,21 +1,53 @@
 <div class="container">
   <h1 class="order-form__title">wanna eat?</h1>
   <div class="order-form">
-    <form id = "userDataForm" name="userData" onsubmit="return callApi()">
-      <label>full name</label><input type="text" name="name"><br>
-      <label>street</label><input type="text" name="street"><br>
-      <label>city</label><input type="text" name="city"><br>
-      <label>house no.</label><input type="text" name="housenumber"><br>
-      <label>Postal code</label><input type="text" name="postalcode"><br>
-      <label>Email</label><input type="text" name="email"><br>
-      <label>Phone number</label><input type="text" name="phonenumber"><br>
-      <label>€</label><input type="text" name="amount"><br>
-      <label>Bank</label><select id="bank">
-      <option value="rabobank">Rabobank</option>
-      <option value="abnamro">ABN AMRO</option>
-      <option value="ing">ING</option>
-    </select><br>
-      <input id="submit-btn" type="submit">
-    </form>
+    <div class="order-form__row">
+      <div class="order-form__row__element">
+        <label>full name</label>
+        <input type="text" name="name"><br>
+      </div>
+    </div>
+    <div class="order-form__row">
+      <div class="order-form__row__element">
+        <label>street</label><input type="text" name="street"><br>
+      </div>
+      <div class="order-form__row__element">
+        <label>house no.</label><input type="text" name="housenumber"><br>
+      </div>
+    </div>
+    <div class="order-form__row">
+      <div class="order-form__row__element">
+        <label>city</label><input type="text" name="city"><br>
+      </div>
+      <div class="order-form__row__element">
+        <label>Postal code</label><input type="text" name="postalcode"><br>
+      </div>
+    </div>
+    <div class="order-form__row">
+      <div class="order-form__row__element">
+        <label>Email</label><input type="text" name="email"><br>
+      </div>
+    </div>
+    <div class="order-form__row">
+      <div class="order-form__row__element">
+        <label>Phone number</label><input type="text" name="phonenumber"><br>
+      </div>
+    </div>
+    <div class="order-form__row">
+      <div class="order-form__row__element">
+        <label>how much € do you want to spend?</label><input type="text" name="amount"><br>
+      </div>
+    </div>
+    <div class="order-form__row">
+      <div class="order-form__row__element">
+      <label>Bank</label>
+      <select id="bank">
+        <option value="rabobank">Rabobank</option>
+        <option value="abnamro">ABN AMRO</option>
+        <option value="ing">ING</option>
+      </select>
+      </div>
+      <input id="submit-btn" type="submit" value = "order">
+    </div>
   </div>
 </div>
