--- a/frontend/src/app/order-form/order-form.component.html
+++ b/frontend/src/app/order-form/order-form.component.html
@@ -1,7 +1,20 @@
 <div class="container">
   <h1 class="order-form__title">wanna eat?</h1>
   <div class="order-form">
-    <mat-spinner *ngIf="showSpinner"></mat-spinner>
+    <div *ngIf="showSpinner" class="overlay overlay__spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+    <div *ngIf="orderPlaced" class="overlay overlay__success">
+      <div class="overlay__success__title">
+        tada 🎉
+      </div>
+      <div class="overlay__success__content">
+        Use the following url to pay for your order: ____
+      </div>
+      <div class="overlay__success__reset">
+        <button (click)="resetForm()">Generate another order</button>
+      </div>
+    </div>
   <form [formGroup]="orderForm" (ngSubmit)="onSubmit(orderForm.value)"
     [ngClass]="showSpinner ? 'show_spinner':''">
     <div class="order-form__row">
