--- a/frontend/src/app/order-form/order-form.component.css
+++ b/frontend/src/app/order-form/order-form.component.css
@@ -14,6 +14,10 @@
   border: black solid 2px;
   width: 500px;
   position: relative;
+  -webkit-box-shadow: 5px 5px 7px -2px rgba(56,56,56,1);
+  -moz-box-shadow: 5px 5px 7px -2px rgba(56,56,56,1);
+  box-shadow: 5px 5px 7px -2px rgba(56,56,56,1);
+  margin-bottom:50px;
 }
 
 .order-form__title {
@@ -52,13 +56,13 @@ select {
   margin-left: 10px;
 }
 
-#submit-btn {
+button {
   background: black;
   font-size:26px;
   color: white;
   font-weight: bold;
-  width:130px;
-  padding:10px;
+  padding: 10px 20px;
+  width: auto;
 }
 
 .overlay {
@@ -79,6 +83,8 @@ select {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .overlay__success__title {
