frontend now communicates with backend

--- a/frontend/src/app/order-form/order-form.component.html
+++ b/frontend/src/app/order-form/order-form.component.html
@@ -58,9 +58,9 @@
       <div class="order-form__row__element">
       <label>bank</label>
       <select id="bank" formControlName="bank">
-        <option value="rabobank">Rabobank</option>
-        <option value="abnamro">ABN AMRO</option>
-        <option value="ing">ING</option>
+        <option value="Rabobank">Rabobank</option>
+        <option value="ABN_AMRO">ABN AMRO</option>
+        <option value="ING">ING</option>
       </select>
       </div>
       <button type="submit" value = "order">order</button>
